<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context="MoreInfoActivity">

    <!-- Navigation Bar -->

    <RelativeLayout
        android:id="@+id/navBar"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:background="@color/primaryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Page Title -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_medium"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/moreInfo"
            android:textColor="@color/primary"
            android:textSize="20sp" />

    </RelativeLayout>

    <!-- Buttons -->

    <Button
        android:id="@+id/NASPGHANbutton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:text="@string/NASPGHANbutton"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar" />

    <Button
        android:id="@+id/AAAIbutton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:text="@string/AAAIbutton"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NASPGHANtext" />

    <Button
        android:id="@+id/APFEDbutton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:text="@string/APFEDbutton"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AAAItext" />

    <Button
        android:id="@+id/chrichmondButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:text="@string/CHRICHMONDbutton"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APFEDtext" />
    <!-- Text Views -->

    <TextView
        android:id="@+id/NASPGHANtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:text="@string/NASPGHANtext"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NASPGHANbutton" />

    <TextView
        android:id="@+id/AAAItext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:text="@string/AAAItext"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AAAIbutton" />

    <TextView
        android:id="@+id/APFEDtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:text="@string/APFEDtext"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APFEDbutton" />

    <TextView
        android:id="@+id/CHRICHMONDtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:text="@string/CHRICHMONDtext"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chrichmondButton" />

    <Button
        android:id="@+id/CEGIRbutton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_edittext_bg"
        app:backgroundTint="@color/primary"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:paddingBottom="0dp"
        android:text="@string/CEGIRbutton"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CHRICHMONDtext" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:text="@string/CEGIRtext"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CEGIRbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>