<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context="TreatmentActivity">

    <RelativeLayout
        android:id="@+id/navBar"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:background="@color/primaryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/lato_medium"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/treatedEoE"
            android:textColor="@color/primary"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/howEoETreated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/howEoETreated"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navBar" />

    <TextView
        android:id="@+id/optionA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/optionA"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/howEoETreated" />

    <TextView
        android:id="@+id/optionB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/optionB"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionA" />

    <TextView
        android:id="@+id/optionC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/optionC"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionB" />

</androidx.constraintlayout.widget.ConstraintLayout>