<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".MainActivity">

    <!-- Navigation Bar -->
    <RelativeLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primaryBackground">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/backDescription"
            app:tint="#ffffff" />

        <!-- Page Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/appName"
            android:textColor="@color/primary"
            android:textSize="33sp" />
    </RelativeLayout>

    <!-- Text Input Fields -->

    <!-- Buttons -->

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/navBar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:text="@string/signIn"
        android:textColor="#ffffff"
        android:textSize="17sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/signInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edittext_bg"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:text="@string/signUp"
        android:textColor="#ffffff"
        android:textSize="17sp" />

</RelativeLayout>
